force-app/main/default/objects/Group_Participant__c/Group_Participant__c.object-meta.xml
<CustomObject>
    <label>Group Participant</label>
    <nameField>
        <displayFormat>GP-{00000}</displayFormat>
        <label>Group Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>