force-app/main/default/objects/Group_Participant__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>Group Participants</relationshipLabel>
    <relationshipName>Group_Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>