force-app/main/default/objects/Group_Participant__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Groups Participated In</relationshipLabel>
    <relationshipName>Group_Participants</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>