force-app/main/default/objects/Group_Participant__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <formula>Group__r.Session__r.Name</formula>
    <label>Session</label>
    <type>Text</type>
</CustomField>