force-app/main/default/objects/Group_Participant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Session__c</columns>
    <columns>Group__c</columns>
    <columns>Participant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>